# UR3e_RG2_ER5

./: README.md
UR3e_RG2_ER5_description/: README.md
UR3e_RG2_ER5_description/launch/: gazebo.launch
UR3e_RG2_ER5_description/urdf/: er5.urdf.xacro  kinect_camera.urdf.xacro  rg2.urdf.xacro  ur3e_with_rg2.urdf.xacro
UR3e_RG2_ER5_gripper_control/: README.md
UR3e_RG2_ER5_gripper_gazebo/src/: gripper_object_attach.py
UR3e_RG2_ER5_moveit_config/: README.md
UR3e_RG2_ER5_moveit_config/config/: controllers.yaml  joint_limits.yaml  ur3e_with_rg2.srdf
UR3e_RG2_ER5_moveit_config/launch/: UR3e_RG2_ER5_moveit_controller_manager.launch.xml
UR3e_RG2_ER5_pick_place/: CMakeLists.txt  README.md  package.xml
UR3e_RG2_ER5_pick_place/launch/: pick_place_launch.launch  pick_place_objects.launch
UR3e_RG2_ER5_pick_place/msg/: object_sphere.msg
UR3e_RG2_ER5_pick_place/src/: full_robot_pick_place.cpp
UR3e_RG2_ER5_pick_place/urdf/: object_sphere.urdf.xacro
UR3e_RG2_ER5_vision/: CMakeLists.txt  README.md  image_segmenting.py  kinect_bksubract.py  kinect_bksubtract.py
UR3e_RG2_ER5_vision/launch/: camera.launch
